// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link can render as custom component 1`] = `
<button
  className="link "
  href="/bar"
  onClick={[Function]}
>
  Absolute
</button>
`;

exports[`Link renders children 1`] = `
Array [
  <a
    className="link is-active"
    href="/"
    onClick={[Function]}
  >
    Home
  </a>,
  <a
    className="link "
    href="/sub"
    onClick={[Function]}
  >
    Sub
  </a>,
]
`;

exports[`prepends path from parent route for relative links 1`] = `
Array [
  <a
    className="link "
    href="/bar"
    onClick={[Function]}
  >
    Absolute
  </a>,
  <a
    className="link "
    href="/foo/bar"
    onClick={[Function]}
  >
    Relative
  </a>,
]
`;
